Fixed left alignment issues for mcq popup

--- a/adventure/public/css/adventure.css
+++ b/adventure/public/css/adventure.css
@@ -19,7 +19,7 @@
 }
 .adventure .navigation-view .navigation-back-next-buttons {
     margin: 0 auto;
-    padding: 20px 40px 10px;
+    padding: 20px 25px 10px;
     max-width: 600px;
     background: #F2F2F2;
     border-radius: 0 0 4px 4px;
@@ -94,13 +94,14 @@
     border-width: 1px 0;
 }
 
-.adventure .ooyala-child .ooyala-player-xblock-wrapper .transcript-header, 
+.adventure .ooyala-child .ooyala-player-xblock-wrapper .transcript-header,
 .ooyala-player-xblock-wrapper .transcript-content,
 .adventure .ooyala-child .ooyala-player-xblock-wrapper .transcript-footer {
     border-bottom: none;
 }
 
 .adventure .question {
+    margin: 0 -15px;
     margin-bottom: 1em;
     max-width: 100%;
 }
@@ -241,7 +242,7 @@
 .step-content .xblock-light-child p {
     margin: 0;
 }
-.step-content .xblock-light-child .html_child.correct, 
+.step-content .xblock-light-child .html_child.correct,
 .step-content .xblock-light-child .html_child.incorrect {
     margin: 15px -15px;
     padding: 20px 30px;
@@ -251,14 +252,14 @@
     line-height: 24px;
     color: #2E2E2E;
 }
-.step-content .xblock-light-child .html_child.correct p, 
+.step-content .xblock-light-child .html_child.correct p,
 .step-content .xblock-light-child .html_child.incorrect p {
     margin: 0;
 }
 .step-content .xblock-light-child .html_child.incorrect {
     background: #FFD7B3;
 }
-.step-content .xblock-light-child .html_child.correct strong, 
+.step-content .xblock-light-child .html_child.correct strong,
 .step-content .xblock-light-child .html_child.incorrect strong {
     display: block;
     margin: 0 0 15px;
@@ -268,7 +269,7 @@
     padding: 5px 0 5px 55px;
     position: relative;
 }
-.step-content .xblock-light-child .html_child.correct strong:after, 
+.step-content .xblock-light-child .html_child.correct strong:after,
 .step-content .xblock-light-child .html_child.incorrect strong:after {
     position: absolute;
     left: 0;
@@ -302,11 +303,11 @@
     right: auto;
     left: 0;
 }
-.rtl-content .step-content .xblock-light-child .html_child.correct strong, 
+.rtl-content .step-content .xblock-light-child .html_child.correct strong,
 .rtl-content .step-content .xblock-light-child .html_child.incorrect strong {
     padding: 5px 55px 5px 0;
 }
-.rtl-content .step-content .xblock-light-child .html_child.correct strong:after, 
+.rtl-content .step-content .xblock-light-child .html_child.correct strong:after,
 .rtl-content .step-content .xblock-light-child .html_child.incorrect strong:after {
     left: auto;
     right: 0;
@@ -338,18 +339,18 @@
         font-size: 14px;
         line-height: 20px;
     }
-    .step-content .xblock-light-child .html_child.correct, 
+    .step-content .xblock-light-child .html_child.correct,
     .step-content .xblock-light-child .html_child.incorrect {
         padding: 15px;
     }
-    .step-content .xblock-light-child .html_child.correct strong, 
+    .step-content .xblock-light-child .html_child.correct strong,
     .step-content .xblock-light-child .html_child.incorrect strong {
         font-size: 19px;
         line-height: 30px;
         padding: 5px 0 5px 35px;
         margin: 0 0 5px;
     }
-    .step-content .xblock-light-child .html_child.correct strong:after, 
+    .step-content .xblock-light-child .html_child.correct strong:after,
     .step-content .xblock-light-child .html_child.incorrect strong:after {
         width: 30px;
         height: 30px;
@@ -357,7 +358,7 @@
         font-size: 18px;
         margin-top: -15px;
     }
-    .rtl-content .step-content .xblock-light-child .html_child.correct strong, 
+    .rtl-content .step-content .xblock-light-child .html_child.correct strong,
     .rtl-content .step-content .xblock-light-child .html_child.incorrect strong {
         padding: 5px 35px 5px 0;
     }
